kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-service-password
  labels:
    app: self-service-password
  namespace: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: self-service-password
  template:
    metadata:
      labels:
        app: self-service-password
    spec:
      containers:
        - name: self-service-password
          image: omegazeng/self-service-password
          ports:
          - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /var/www/html/conf/
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: self-service-password
