kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-service-password
  namespace: ldap
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: self-service-password
