kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: self-service-password-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: cloudflare
  namespace: ldap
spec:
  rules:
    - host: ssp.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: self-service-password
              servicePort: 80
  tls:
    - hosts:
        - ssp.example.com
      secretName: ssp-example-com-tls
